Fix layout issues

--- a/src/app/core/components/widgets/widgetpool/widgetpool.component.css
+++ b/src/app/core/components/widgets/widgetpool/widgetpool.component.css
@@ -116,7 +116,6 @@
 
 .disk-detail-header{
   text-align:left;
-  margin-left:;
 }
 
 span.disk-detail-title,
