--- a/src/app/core/components/widgets/widgetsysinfo/widgetsysinfo.component.css
+++ b/src/app/core/components/widgets/widgetsysinfo/widgetsysinfo.component.css
@@ -158,3 +158,7 @@ p.value{
 .xs .title-wrapper .update-btn{
   display:none;
 }
+
+p.value {
+  margin: 0;
+}
